# owl-control

./: .gitattributes  .gitignore  Cargo.toml  GAMES.md  LICENSE  ONBOARDING.md  README.md  electron-builder.yml  error.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  reset-consent.js  reset-consent.sh  setup.bat  setup.sh  tailwind.config.js  test-packaging.bat  test-packaging.sh  tsconfig.json  webpack.config.js
.github/workflows/: electron-build.yml
build-resources/: installer.nsh
crates/constants/src/: lib.rs  unsupported_games.rs
crates/game-process/: Cargo.toml
crates/game-process/src/: lib.rs
crates/input-capture/: Cargo.toml  build.rs
crates/input-capture/examples/: input-read.rs
crates/input-capture/src/: directinput.rs  gamepad_capture.rs  kbm_capture.rs  lib.rs  raw_input.rs  set_device_data_format.cpp
crates/owl-recorder/: Cargo.toml
crates/owl-recorder/src/: find_game.rs  hardware_id.rs  hardware_specs.rs  idle.rs  input_recorder.rs  keycode.rs  lib.rs  main.rs  raw_input_debouncer.rs  record_window.rs  recorder.rs  recording.rs  unsupported_games.rs  window_recorder.rs
crates/raw-input/: Cargo.toml
crates/raw-input/src/: lib.rs
crates/update-unsupported-games/: Cargo.toml
crates/update-unsupported-games/src/: main.rs
crates/video-audio-recorder/: Cargo.toml
crates/video-audio-recorder/src/: lib.rs
data_utils/: README.md  config.py  extract_button_inputs.py  extract_mouse_inputs.py  keybinds.py
scripts/: bump-version.js  bundle-python.js  download-gstreamer-msi.ps1  download-requirements.ps1  download-vc-redist.ps1  gstreamer-install.ps1  gstreamer-uninstall.ps1  test-packaging.js
src/: index.html  index.js  log.ts  main.ts  preload.js  preload.ts  settings-styles.css  styles.css  widget.html
src/components/: logo.tsx  theme-provider.tsx  theme-toggle.tsx  upload-panel.tsx
src/components/ui/: button.tsx  label.tsx
src/pages/: api-key-page.tsx  consent-page.tsx  main-page.tsx  settings-page.tsx  widget-ui.tsx
src/services/: auth-service.ts  constants.ts  electron-service.ts  mock-auth.ts  python-bridge.ts  stack-auth.ts  upload-service.ts
src/styles/: globals.css
vg_control/: constants.py  main.py  metadata.py  recorder.py  recording_bridge.py  upload_bridge.py  upload_worker.py
vg_control/auth/: login_ui.py  stack_client.py
vg_control/data/: owl.py  tigris.py  uploader.py
vg_control/data/input_utils/: README.md  buttons.py  gamepad.py  keybinds.py  mouse.py
vg_control/input_tracking/: keybinds.py  rawinputlib.py  spam_block.py  tracker.py  writer.py
vg_control/video/: obs_bridge.py  obs_client.py  resolution.py
