[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
clap = { version = "4.5.39", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
gstreamer = { version = "0.23.6", features = ["log"] }
tokio = { version = "1.45.1", features = ["full"] }
futures-util = "0.3.31"
color-eyre = "0.6.5"
derive_more = { version = "2.0.1", features = ["full"] }
windows = "0.61.3"
