[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
video-audio-recorder = { path = "crates/video-audio-recorder" }
raw-input = { path = "crates/raw-input" }
game-process = { path = "crates/game-process" }
clap = { version = "4.5.39", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
gstreamer = { version = "0.23.6", features = ["log"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
futures-util = "0.3.31"
color-eyre = "0.6.5"
derive_more = { version = "2.0.1", features = ["full"] }
windows = "0.61.3"
uuid = { version = "1.17.0", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bstr = "1.12.0"
