[tool.poetry]
name = "vg-control"
version = "1.0.0"
description = "Video game control input tracking application"
authors = ["Open World Labs"]
readme = "README.md"
packages = [{include = "vg_control"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.0"
websockets = "^11.0"
pynput = "^1.7.6"
python-dotenv = "^1.0.0"
pywin32 = {version = "^306", markers = "sys_platform == 'win32'"}
aiohttp = "^3.8.0"
numpy = "^2.0.0"
opencv-python = "^4.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true