[package]
name = "game-process"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.60.0", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }
color-eyre.workspace = true
