[package]
name = "input-capture"
version = "0.0.0"
edition = "2024"

[dependencies]
tracing.workspace = true
windows = { workspace = true, features = [
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }
color-eyre.workspace = true
tokio.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
