[package]
name = "owl-recorder"
version = "0.7.0"
edition = "2024"

[dependencies]
video-audio-recorder = { workspace = true, optional = true }
raw-input.workspace = true
game-process.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
color-eyre.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri-winrt-notification.workspace = true
sysinfo.workspace = true

[features]
default = ["real-video"]
real-video = ["dep:video-audio-recorder"]
