[package]
name = "video-audio-recorder"
version = "0.0.0"
edition = "2024"

[dependencies]
clap.workspace = true
tracing.workspace = true
tokio.workspace = true
futures-util.workspace = true
color-eyre.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
obws.workspace = true
windows.workspace = true